...
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_gravity="center">
                    <TextView
                        android:id="@+id/profilePageProfileName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:textColor="#000000"
                        android:textSize="20dp"
                        android:layout_margin="5dp"
                        android:fontFamily="@font/montserratlight"
                        android:text=""/>
                    <TextView
                        android:id="@+id/profilePageProfileText1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/profilePageProfileName"
                        android:textAlignment="textEnd"
                        android:textColor="#000000"
                        android:textSize="15dp"
...
                        android:textColor="#000000"
                        android:textSize="20dp"
                        android:fontFamily="@font/montserratlight"
                        android:layout_margin="5dp"
                        android:text="Average Heartbeat\n(Today)"/>
                    <TextView
                        android:id="@+id/profilePageHeartbeatSubText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/profileHeartbeatText"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="20dp"
...
                        android:textColor="#000000"
                        android:textSize="20dp"
                        android:layout_margin="5dp"
                        android:fontFamily="@font/montserratlight"
                        android:text="Total Steps\n(Today)"/>
                    <TextView
                        android:id="@+id/profilePageStepsSubText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/profilePageStepsText"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="20dp"
...
                        android:textColor="#000000"
                        android:textSize="20dp"
                        android:layout_margin="5dp"
                        android:fontFamily="@font/montserratlight"
                        android:text="Last Alert\n(AutomatedSOS)"/>
                    <TextView
                        android:id="@+id/profilePageAlertsSubText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/profilePageAlertsText"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="15dp"
...
                android:layout_marginRight="50dp"
                android:background="@color/lightGrey"
                android:id="@+id/profilePageSeparator3"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:id="@+id/profilepageRemoveFriendButtonContainer">

                <Button
                    android:id="@+id/profilepageRemoveFriendButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Remove friend"
...
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:weightSum="1"
                android:background="@drawable/ripplewhite"
                android:clickable="true"
                android:visibility="gone"
                android:id="@+id/profileSendRequestButtonContainer">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1"/>


...
