...
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:weightSum="1"
                android:background="@drawable/ripplewhite"
                android:clickable="true"
                android:id="@+id/homepageProfileButton">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3">
                    <frassonlancellottilodi.data4health.utils.SquareImageView
                        android:id="@+id/homepageProfilePicture"
...
